<resources>
    <string name="app_name">彩</string>

    <string name="net_error">网络异常</string>
    <string name="request_failed">请求数据出错</string>
    <string name="submit">提交</string>
    <string name="refresh">刷新数据ing...</string>
    <string name="refresh_success">数据更新成功</string>
    <string name="no_data">暂无数据</string>

    <string name="main_tab_index">开奖</string>
    <string name="expect_label">第%s期</string>
    <string name="open_time_label">开奖时间：%s</string>

    <string name="main_tab_news">资讯</string>
    <string name="news_detail_title">资讯详情</string>
    <string name="news_update_time">发布时间：%s</string>

    <string name="main_tab_setting">设置</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_tip">请输入您的宝贵意见</string>
    <string name="contact_tip">请输入您的联系方式：手机/微信/邮箱/QQ</string>
    <string name="about_title">关于软件</string>
    <string name="about_text">开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。
    开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。
    开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。
    开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。
    开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。
    开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。开奖信息一手掌握。</string>
    <string name="version_title">版本信息</string>
</resources>
