<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.love_cookies.cookie_library.widget.CookieTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <com.mario.cai.view.widget.SettingItemView
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:Title="@string/feedback_title" />

            <com.mario.cai.view.widget.SettingItemView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:Title="@string/about_title" />

            <com.mario.cai.view.widget.SettingItemView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:Title="@string/version_title" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
