<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.love_cookies.cookie_library.widget.CookieTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="top"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:hint="@string/feedback_tip"/>

            <EditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="top"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:hint="@string/contact_tip"
                android:singleLine="true"/>

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:background="@drawable/btn_bg"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
